Project logo updated

--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -22,9 +22,9 @@ page-welcome {
   }
   .splash-logo {
     margin: auto;
-    background: url('../assets/img/appicon.png') repeat transparent;
+    background: url('../assets/img/logo-vdp.png') no-repeat transparent;
     background-size: 100%;
-    width: 128px;
+    width: 200px;
     height: 128px;
   }
   .splash-intro {
